--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
   background-position: center center;
   padding: 20px 100px;
 /*  min-width: 800px; */
+opacity: 0.9;
   border-radius: 25px;
   transform: rotateZ(-6deg);
   box-shadow: 1px 15px 20px 0px rgba(0,0,0,0.5);
@@ -34,7 +35,7 @@ body {
 }
 
 .paper.image {
-  padding: 20px;
+  padding: 30px;
   border-radius: 25px
 }
 .paper.image p {
@@ -66,11 +67,10 @@ img {
 }
 
 p {
-  font-family: 'Zeyada';
+  font-family: 'Zeyada', cursive;
   font-size: 50px;
   color: rgb(3, 3, 73);
-  opacity: 0.75;
+  opacity: 1;
   user-select: none;
   
-   filter: drop-shadow(2px 1.5px 1px rgba(0,0,105,0.9));
 }
