--- a/style.css
+++ b/style.css
@@ -40,6 +40,11 @@ opacity: 0.9;
 
   border-radius: 25px
 }
+.font{
+  font-size: 30px;
+  font-family: 'Merienda', cursive;;
+  
+}
 .paper.image p {
   font-size: 30px;
  font-family: 'Merienda', cursive;;
